# yolo_flet

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
examples/yolo_flet_example/: pyproject.toml
examples/yolo_flet_example/src/: learn_cv.py  main.py
src/flutter/yolo_flet/: pubspec.yaml
src/flutter/yolo_flet/lib/: yolo_flet.dart
src/flutter/yolo_flet/lib/src/: extension.dart  yolo_flet.dart
src/yolo_flet/: __init__.py  types.py  yolo_flet.py
src/yolo_flet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
