[project]
name = "yolo-flet"
version = "0.1.1"
description = "YoloFlet control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.3",
]

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/yolo-flet"
Repository = "https://github.com/MyGithubAccount/yolo-flet"
Issues = "https://github.com/MyGithubAccount/yolo-flet/issues"

[tool.setuptools.package-data]
"flutter.yolo_flet" = ["**/*"]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
